--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/teamstats
+spring.datasource.url=jdbc:mysql://localhost:3306/covidparsing
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -14,10 +14,4 @@ teamstats.team.service.url=http://localhost:8080
 logging.level.org.springframework.security=DEBUG
 spring.devtools.livereload.port=35740
 
-# App Properties
-teamstats.app.jwtSecret=secret
-# teamstats.app.jwtExpiration=2700000
-# 45m
-teamstats.app.jwtExpiration=86400000
-# 1 day
 spring.main.allow-circular-references=true
