--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,9 +9,9 @@ spring.jpa.open-in-view=true
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 
-teamstats.team.service.url=http://localhost:8080
+#teamstats.team.service.url=http://localhost:8080
 
 logging.level.org.springframework.security=DEBUG
 spring.devtools.livereload.port=35740
 
-spring.main.allow-circular-references=true
+#spring.main.allow-circular-references=true
